# cybergaurd

./: Dockerfile  LICENSE  README (5).md  README.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
Server/: app.py  environment.py
server/: app.py  environment.py
